revert back to old inverted cursor method as the current one is buggy on mobile phones or touchscreens

--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ html, body {
 
 .custom-cursor {
   display: none;
-  position: fixed;
+  position: absolute;
   width: 40px;
   height: 40px;
   background: #ffffff;
